# cmake.examples

./: README.md
cmake.examples/cmake-tutorials-2/: CMakeLists.txt
cmake.examples/cmake-tutorials-2/src/: mainapp.cpp
cmake.examples/cmake-tutorials-3/: CMakeLists.txt
cmake.examples/cmake-tutorials-3/include/: Student.h
cmake.examples/cmake-tutorials-4/: CMakeLists.txt
cmake.examples/cmake-tutorials-4/src/: Student.cpp
cmake.examples/cmake-tutorials-5/: CMakeLists.txt  libtest.cpp
